# swc2dot

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  Makefile  N3_6.CNG.swc  README.md
src/: cli_parser.rs  components.rs  config.rs  default_config.yml  main.rs  parser.rs  swc_parser.rs  writer.rs
src/writer/: mod.rs  string_buffer.rs
