[package]
name = "swc2dot"
version = "0.1.1"
authors = ["Emerson Harkin <emerson.f.harkin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
clap = "2.33.1"
yaml-rust = "0.4.3"
linked-hash-map = "0.5.3"
